fixed scrollbar spacing on book club reading list dash.

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -56,3 +56,9 @@
     min-width: 31px;
     min-height: 31px;
 }
+
+.dashboardhome--readinglist {
+    width: 100% !important;
+    margin-right: 5px !important;
+    margin-bottom: 5px !important;
+}
